Build with bookworm Use custom JRE at runtime, not full JDK